# flake8-match

./: README.md  azure-pipelines.yml  flake8_match.py  setup.cfg  tox.ini
.github/workflows/: main.yml
tests/: flake8_match_test.py
