[metadata]
name = flake8_match
version = 1.0.0
description = flake8 plugin which forbids match statements (PEP 634)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/asottile/flake8-match
author = Anthony Sottile
author_email = asottile@umich.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10

[options]
py_modules = flake8_match
install_requires =
    flake8>=3.8
python_requires = >=3.10

[options.entry_points]
flake8.extension =
    MAT=flake8_match:Plugin

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
